--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
     id 'java'
     id 'jacoco'
     id "org.owasp.dependencycheck" version "5.0.0-M3.1"
+    id "org.ajoberstar.grgit" version "3.1.1"
 }
 
 
