[Gradle Release Plugin] - pre tag commit:  '5.0.0-BETA-1'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=5.0.0-SNAPSHOT
+version=5.0.0-BETA-1
 description=EPAM Report portal. Main API Service
 logback=1.1.11
 dockerServerUrl=unix:///var/run/docker.sock
