--- a/build.gradle
+++ b/build.gradle
@@ -188,6 +188,7 @@ wrapper {
 
 //TODO: remove it when ready to release from master
 release {
+    pushReleaseVersionBranch = true
     git {
         requireBranch = 'ps-migrations-master'
     }
