update build script

--- a/build.gradle
+++ b/build.gradle
@@ -188,10 +188,7 @@ wrapper {
 
 //TODO: remove it when ready to release from master
 release {
-    pushReleaseVersionBranch = 'ps-migrations-master'
-    git {
-        requireBranch = 'ps-migrations-master'
-    }
+    pushReleaseVersionBranch = 'master'
 }
 
 //Start section for external jacoco test report
