--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ dependencies {
         compile 'com.epam.reportportal:commons:5.0.0-BETA-2'
         compile('com.epam.reportportal:plugin-api:5.0.0-BETA-3')
     } else {
-        compile 'com.github.reportportal:commons-dao:f834321'
+        compile 'com.github.reportportal:commons-dao:67523683'
         compile 'com.github.reportportal:commons-rules:8a66b8d'
         compile 'com.github.reportportal:commons-model:f8306ac'
         compile('com.github.reportportal:commons:71d4aca')
@@ -189,6 +189,22 @@ wrapper {
 release {
     pushReleaseVersionBranch = 'master'
 }
+
+/*
+ * Copyright 2019 EPAM Systems
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
 
 //Start section for external jacoco test report
 tasks.withType(JavaCompile) {
