--- a/build.gradle
+++ b/build.gradle
@@ -108,8 +108,8 @@ dependencies {
     compile 'com.saucelabs:saucerest:1.0.40'
 
     //move this to the plugin-api
-    compile('com.atlassian.fugue:fugue:2.6.1')
-    compile('com.atlassian.jira:jira-rest-java-client-core:4.0.0')
+    compile 'io.atlassian.fugue:fugue:4.7.2'
+    compile('com.atlassian.jira:jira-rest-java-client-core:5.1.2-2bd0a62e')
     //*****************************
 
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
@@ -178,7 +178,7 @@ dependencies {
     compile 'io.springfox:springfox-swagger2'
 
     compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
-    compile group: 'com.google.guava', name: 'guava', version: '25.1-jre'
+    compile group: 'com.google.guava', name: 'guava', version: '26.0-jre'
 
     api 'org.jacoco:org.jacoco.agent:0.8.3'
 
