--- a/build.gradle
+++ b/build.gradle
@@ -90,16 +90,16 @@ configurations {
 
 dependencies {
     if (releaseMode) {
-        compile 'com.epam.reportportal:commons-dao:5.0.0-BETA-3'
-        compile 'com.epam.reportportal:commons-rules:5.0.0-BETA-3'
-        compile 'com.epam.reportportal:commons-model:5.0.0-BETA-3'
+        compile 'com.epam.reportportal:commons-dao:5.0.0-BETA-5'
+        compile 'com.epam.reportportal:commons-rules:5.0.0-BETA-4'
+        compile 'com.epam.reportportal:commons-model:5.0.0-BETA-4'
         compile 'com.epam.reportportal:commons:5.0.0-BETA-2'
         compile('com.epam.reportportal:plugin-api:5.0.0-BETA-3')
     } else {
-        compile 'com.github.reportportal:commons-dao:26239f3e'
-        compile 'com.github.reportportal:commons-rules:8a66b8d'
-        compile 'com.github.reportportal:commons-model:efc9505'
-        compile('com.github.reportportal:commons:71d4aca')
+        compile 'com.github.reportportal:commons-dao:5.0.0-BETA-5'
+        compile 'com.github.reportportal:commons-rules:5.0.0-BETA-4'
+        compile 'com.github.reportportal:commons-model:5.0.0-BETA-4'
+        compile('com.github.reportportal:commons:5.0.0-BETA-2')
         compile('com.github.reportportal:plugin-api:30f47d49')
     }
 
