--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     } else {
         compile 'com.github.reportportal:commons-dao:5.0.0-BETA-6'
         compile 'com.github.reportportal:commons-rules:5.0.0-BETA-6'
-        compile 'com.github.reportportal:commons-model:5.0.0-BETA-6'
+        compile 'com.github.reportportal:commons-model:61f7a9dd'
         compile('com.github.reportportal:commons:5.0.0-BETA-2')
         compile('com.github.reportportal:plugin-api:5.0.0-BETA-6')
     }
