--- a/build.gradle
+++ b/build.gradle
@@ -96,9 +96,9 @@ dependencies {
         compile 'com.epam.reportportal:commons:5.0.0-BETA-2'
         compile('com.epam.reportportal:plugin-api:5.0.0-BETA-6')
     } else {
-        compile 'com.github.reportportal:commons-dao:ecb290c6'
+        compile 'com.github.reportportal:commons-dao:7b30a95'
         compile 'com.github.reportportal:commons-rules:5.0.0-BETA-6'
-        compile 'com.github.reportportal:commons-model:c089ee9'
+        compile 'com.github.reportportal:commons-model:c034aa9'
         compile('com.github.reportportal:commons:5.0.0-BETA-2')
         compile('com.github.reportportal:plugin-api:a60d458')
     }
@@ -231,8 +231,9 @@ jar.dependsOn gitInfo
 build.dependsOn jacocoTestReport
 
 ext.src = [
-        'https://raw.githubusercontent.com/reportportal/migrations/master/migrations/1_initialize_schema.up.sql': 'V001__initialize_schema.sql',
-        'https://raw.githubusercontent.com/reportportal/migrations/master/migrations/3_default_data.up.sql'     : 'V002__default_data.sql'
+        'https://raw.githubusercontent.com/reportportal/migrations/master/migrations/1_initialize_schema.up.sql'         : 'V001__initialize_schema.sql',
+        'https://raw.githubusercontent.com/reportportal/migrations/master/migrations/3_default_data.up.sql'              : 'V002__default_data.sql',
+        'https://raw.githubusercontent.com/reportportal/migrations/code-ref-db/migrations/4_alter_test_item_location.sql': 'V003_alter_test_item_location.sql'
 ]
 
 task copyTestDatabaseScripts {
